// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileForm /> renders properly with default props 1`] = `
<ProfileForm
  registerNewUserAndLogin={[MockFunction]}
  saveEditedUserInfo={[MockFunction]}
  user={Object {}}
>
  <h1
    className="text-center m-3"
  >
    Register
  </h1>
  <form
    className="col-10 col-md-8 col-lg-7 col-xl-5 mx-auto"
    onSubmit={[Function]}
  >
    <Input
      error=""
      label="Username (a valid E-mail)"
      matchedInputName=""
      name="username"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="username"
        >
          Username (a valid E-mail)
        </label>
        <input
          className="form-control"
          id="username"
          key="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Name"
      matchedInputName=""
      name="name"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="name"
        >
          Name
        </label>
        <input
          className="form-control"
          id="name"
          key="name"
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Country"
      matchedInputName=""
      name="country"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="country"
        >
          Country
        </label>
        <input
          className="form-control"
          id="country"
          key="country"
          name="country"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="City"
      matchedInputName=""
      name="city"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="city"
        >
          City
        </label>
        <input
          className="form-control"
          id="city"
          key="city"
          name="city"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Address"
      matchedInputName=""
      name="address"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="address"
        >
          Address
        </label>
        <input
          className="form-control"
          id="address"
          key="address"
          name="address"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Phone"
      matchedInputName=""
      name="phone"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="phone"
        >
          Phone
        </label>
        <input
          className="form-control"
          id="phone"
          key="phone"
          name="phone"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Password"
      matchedInputName=""
      name="password"
      onValueChange={[Function]}
      type="password"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="form-control"
          id="password"
          key="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Title"
      matchedInputName="password"
      name="confirmPassword"
      onValueChange={[Function]}
      type="password"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="confirmPassword"
        >
          Title
        </label>
        <input
          className="form-control"
          id="confirmPassword"
          key="confirmPassword"
          name="confirmPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
    </Input>
    <button
      className="btn btn-secondary w-100"
      disabled={
        Object {
          "address": "Address is a required field",
          "city": "City is a required field",
          "confirmPassword": "Confirm Password must be at least 5 characters",
          "country": "Country is a required field",
          "name": "Name is a required field",
          "password": "Password must be at least 5 characters",
          "phone": "Phone must be at least 12 characters",
          "username": "Username is a required field",
        }
      }
      type="submit"
    >
      Save
    </button>
  </form>
</ProfileForm>
`;

exports[`<ProfileForm /> renders properly with user data provided 1`] = `
<ProfileForm
  registerNewUserAndLogin={[MockFunction]}
  saveEditedUserInfo={[MockFunction]}
  user={
    Object {
      "address": "Test Adress",
      "city": "Test city",
      "country": "Test country",
      "id": "1",
      "name": "Test user name",
      "phone": "+000000000000",
      "roles": Array [
        "user",
      ],
      "username": "user@user.com",
    }
  }
>
  <h1
    className="text-center m-3"
  >
    Edit profile
  </h1>
  <form
    className="col-10 col-md-8 col-lg-7 col-xl-5 mx-auto"
    onSubmit={[Function]}
  >
    <Input
      error=""
      label="Username (a valid E-mail)"
      matchedInputName=""
      name="username"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="username"
        >
          Username (a valid E-mail)
        </label>
        <input
          className="form-control"
          id="username"
          key="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Name"
      matchedInputName=""
      name="name"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="name"
        >
          Name
        </label>
        <input
          className="form-control"
          id="name"
          key="name"
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Country"
      matchedInputName=""
      name="country"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="country"
        >
          Country
        </label>
        <input
          className="form-control"
          id="country"
          key="country"
          name="country"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="City"
      matchedInputName=""
      name="city"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="city"
        >
          City
        </label>
        <input
          className="form-control"
          id="city"
          key="city"
          name="city"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Address"
      matchedInputName=""
      name="address"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="address"
        >
          Address
        </label>
        <input
          className="form-control"
          id="address"
          key="address"
          name="address"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Phone"
      matchedInputName=""
      name="phone"
      onValueChange={[Function]}
      type="text"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="phone"
        >
          Phone
        </label>
        <input
          className="form-control"
          id="phone"
          key="phone"
          name="phone"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Password"
      matchedInputName=""
      name="password"
      onValueChange={[Function]}
      type="password"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="form-control"
          id="password"
          key="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
    </Input>
    <Input
      error=""
      label="Title"
      matchedInputName="password"
      name="confirmPassword"
      onValueChange={[Function]}
      type="password"
      value=""
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="confirmPassword"
        >
          Title
        </label>
        <input
          className="form-control"
          id="confirmPassword"
          key="confirmPassword"
          name="confirmPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
    </Input>
    <button
      className="btn btn-secondary w-100"
      disabled={
        Object {
          "address": "Address is a required field",
          "city": "City is a required field",
          "confirmPassword": "Confirm Password must be at least 5 characters",
          "country": "Country is a required field",
          "name": "Name is a required field",
          "password": "Password must be at least 5 characters",
          "phone": "Phone must be at least 12 characters",
          "username": "Username is a required field",
        }
      }
      type="submit"
    >
      Save
    </button>
  </form>
</ProfileForm>
`;
